11/02, Clement : Makefile ok, main.c avec quelques tests (NON EXHAUSTIF AT
ALL), check.c pas sur a 100% pour la fonction neighbors, tu peux check stp ?