@@ -1,2 +1,5 @@
 11/02, Clement : Makefile ok, main.c avec quelques tests (NON EXHAUSTIF AT
 ALL), check.c pas sur a 100% pour la fonction neighbors, tu peux check stp ?
+
+12/02, Camille : rajout de tests dans le main.c, modification de la fonction 
+neighbors. 
